skills/openshift-deploy/templates/oc/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: __NAME__-service
    namespace: __NS__
    labels:
        app: __NAME__
        environment: __ENV__
spec:
    ports:
        - name: __PORT__-tcp
          port: __PORT__
          protocol: TCP
          targetPort: __PORT__
    selector:
        app: __NAME__
    sessionAffinity: None
    type: ClusterIP
