skills/openshift-deploy/templates/oc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: __NAME__-route
    namespace: __NS__
    labels:
        app: __NAME__
        environment: __ENV__
spec:
    host: __HOST__
    port:
        targetPort: __PORT__-tcp
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
    to:
        kind: Service
        name: __NAME__-service
        weight: 100
    wildcardPolicy: None
